concord_macros/tests/trybuild/fail/codegen_contract/reserved_multipart_wrong_arity.stderr
error: reserved endpoint I/O family `Multipart` expects exactly one type argument
 --> tests/trybuild/fail/codegen_contract/reserved_multipart_wrong_arity.rs:6:23
  |
6 |     POST Upload(body: Multipart<String, String, String>)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
